--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-		<title>Vite + React + TS</title>
+		<title>React Hooks</title>
 	</head>
 	<body>
 		<div id="root"></div>
